# Playground

./: .gitignore  CODEBASE.md  README.md  axiom.sh  bench.c  bench.swift  build_payload.py  build_retro_branches.py  index.html  instructions.md  llm.txt  main.js  mps_research.swift  payload.js  relay_server.py  session_logic.js  shaders.js
codespace_backend/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  quickdev.sh
codespace_backend/benchmarks/: benchmark_add.cpp  benchmark_all.cpp
codespace_backend/examples/: demo.cpp  main.cpp
codespace_backend/include/: array.hpp
codespace_backend/include/csb/: tensor.hpp
codespace_backend/snippets/: 01_matmul.cpp  02_array_ops.cpp  03_stats.cpp  04_nn_forward.cpp  05_pipeline.cpp  compile_all.sh
codespace_backend/tests/: test_tensor.cpp
research/G7V469/: manifest.md  payload.json
research/NEW_TEST_1/: payload_001_intro.json
research/ZEN-001/: manifest.md  payload.json
research_archive/: 01_oncology_lab.json  02_gnn_lab.json  03_drug_discovery.json
research_archive/mtx_webgpu/: mtx_micro_v1.json
saved_algorithms/: 01_oncology_gnn.json
sessions/0MRSBB/: manifest.md  payload.json
